force-app/main/default/objects/Engagement_Entry__c/Engagement_Entry__c.object-meta.xml
<CustomObject>
    <description>Each record represents a block of time spent on a given engagement for a given user.</description>
    <label>Engagement Entry</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>