force-app/main/default/objects/Engagement_Entry__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>The end time of this engagement entry</description>
    <label>End</label>
    <type>DateTime</type>
</CustomField>