force-app/main/default/objects/Engagement_Entry__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>The engagement that this entry relates to.</description>
    <label>Engagement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Engagement__c.User__c</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Engagement Entries</relationshipLabel>
    <relationshipName>Engagement_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>