force-app/main/default/objects/Engagement_Entry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes relating to this entry</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>