force-app/main/default/objects/Engagement_Entry__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>The start time of this engagement entry</description>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>