force-app/main/default/objects/Engagement_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Duration__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>